[01/04/2010] 1. [MOD] Change the output dependence for line_illumination.vert.
git-svn-id: svn+ssh://repo.recheliu.org/home/leeten/ext/repos/SVN/FlowEntropy/trunk@55 eaa6695f-5702-45ae-85b7-ecd018c7cb11

--- a/FlowEntropyViewer/FlowEntropyViewer.vcproj
+++ b/FlowEntropyViewer/FlowEntropyViewer.vcproj
@@ -275,7 +275,7 @@
 				<Tool
 					Name="VCCustomBuildTool"
 					CommandLine="shader2string $(InputFileName) $(InputFileName).h&#x0D;&#x0A;"
-					Outputs="$(InputFileName) $(InputFileName).h"
+					Outputs="$(InputFileName).h"
 				/>
 			</FileConfiguration>
 		</File>
@@ -318,7 +318,7 @@
 				>
 				<Tool
 					Name="VCCustomBuildTool"
-					CommandLine="&quot;$(CUDA_BIN_PATH)\nvcc.exe&quot; -ccbin &quot;$(VCInstallDir)bin&quot; -c -arch sm_12 -D_DEBUG -DWIN32 -D_CONSOLE -D_MBCS -Xcompiler /EHsc,/W3,/nologo,/Wp64,/O2,/Zi,/MD -o $(ConfigurationName)\$(InputName).obj $(InputPath)&#x0D;&#x0A;"
+					CommandLine="&quot;$(CUDA_BIN_PATH)\nvcc.exe&quot; -ccbin &quot;$(VCInstallDir)bin&quot; -c -arch sm_11 -D_DEBUG -DWIN32 -D_CONSOLE -D_MBCS -Xcompiler /EHsc,/W3,/nologo,/Wp64,/O2,/Zi,/MD -o $(ConfigurationName)\$(InputName).obj $(InputPath)&#x0D;&#x0A;"
 					Outputs="$(ConfigurationName)\$(InputName).obj"
 				/>
 			</FileConfiguration>
